--- a/about.html
+++ b/about.html
@@ -58,7 +58,7 @@
             <button type="submit" class="btn">Register</button>
             <p>or Register with social platforms</p>
             <div class="social-icons">
-                <a href="project.html"><i class='bx bxl-google' ></i></a>
+                <a href="index.html"><i class='bx bxl-google' ></i></a>
                 <a href="#"><i class='bx bxl-facebook' ></i></a>
                 <a href="#"><i class='bx bxl-github' ></i></a>
                 <a href="#"><i class='bx bxl-linkedin' ></i></a>
